# pymodaq_femto

./: .gitignore  MANIFEST.in  README.rst  readthedocs.yml  setup.cfg
.github/workflows/: CI_build.yml  python-publish.yml
data/: spectral_data.csv
docs/: requirements.txt
docs/src/: changelog.rst  conf.py  index.rst
docs/src/usage/: Contributors.rst  Features.rst  Installation.rst  Retriever.rst  Simulator.rst
src/data/dscan_bank/: measured_dscan_0.h5  measured_dscan_1.h5  measured_dscan_10.h5  measured_dscan_11.h5  measured_dscan_12.h5  measured_dscan_13.h5  measured_dscan_14.h5  measured_dscan_15.h5  measured_dscan_16.h5  measured_dscan_17.h5  measured_dscan_2.h5  measured_dscan_3.h5  measured_dscan_4.h5  measured_dscan_5.h5  measured_dscan_6.h5  measured_dscan_7.h5  measured_dscan_8.h5  measured_dscan_9.h5
src/pymodaq_femto/: __init__.py  converter.py  graphics.py  materials.py  pnps.py  result_graphics.py  retriever.py  simulation.py  simulator.py  viewers.py
src/pymodaq_femto/utils/: convert_experimental_data_to_pymodaq.py  convert_to_pymodaq_compatible.py  example_conversion.py  example_fundamental_numpy.npz  example_trace_numpy.npz  generate_rst_params.py  ret_rst_params.rst  rst_params.rst
src/pymodaq_femto/utils/raw_scans/: example_measured_dscan_to_convert.h5
