[metadata]
name = pymodaq_femto
version = file: src/pymodaq_femto/VERSION
description = PyMoDAQ extension for femtosecond laser pulse characterization
long_description = file: readme.rst
license = CeCILL-B
licence_file = LICENSE
url = http://pymodaq.cnrs.fr
author = Sébastien Weber
author_email = sebastien.weber@cemes.fr
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Scientific/Engineering :: Visualization
    License :: CeCILL-B Free Software License Agreement (CECILL-B)
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces

[options]
py_module = pymodaq_femto
python_requires = >=3.6, <3.9
install_requires=
    pymodaq

package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
pymodaq.extensions =
    femto = pymodaq_femto
console_scripts =
    simulator=pymodaq_femto.simulation:main
    retriever=pymodaq_femto.retriever:main

